--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@ html, body {
     margin: 0;
 }
 header {
-    overflow: auto;
-    margin: 0 auto;
+    /* overflow: auto;
+    margin: 0 auto; */
     background-color: #ffffff;
     border-color: #cccccc;
     border-bottom-style: solid;
@@ -14,31 +14,34 @@ header {
 h1, h2, h3 {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.inset {
-    width: 960px;
-    margin: 0 auto;
+.navbar {
+    width: 100%;
 }
-.logoname {
-    float: left;
+.navbar-brand {
+    font-size: x-large;
     background: #4aaaa5;
-    margin: 0 auto;
     color: #ffffff;
     padding: 10px;
 }
-.navigationlinks {
+.navbar-nav {
     float: right;
-    margin: 0 auto;
-    font-size: large;
-    padding: 20px;    
+    font-size: medium;
+    margin-top: auto;
+    overflow: auto;
+       
 }
+
 a {
     color: #777777;
     text-decoration: none;
 }
-main {
-    width: 960px;
-    margin: auto;
-    clear: both;
+.container {
+
+}
+.container2 {
+    /* width: 960px; */
+    margin: 0 auto;
+    overflow: auto;
     background: #ffffff;
     border-color: #dddddd;
     border-style: solid;
@@ -59,6 +62,7 @@ img {
 }
 .aboutme, .portfolio, .contact{
     color: #4aaaa5;
+    ;
 }
 input, textarea{
     width: 890px;
